--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.4.1",
     "convex": "^1.15.0",
     "next": "14.2.8",
+    "openai": "^4.58.1",
     "react": "^18",
     "react-dom": "^18"
   },
